RESOLVED FIXED179741
AX triggers sync layout while building the render tree on www.macrumors.com.
https://bugs.webkit.org/show_bug.cgi?id=179741
Summary AX triggers sync layout while building the render tree on www.macrumors.com.
alan
Reported 2017-11-15 12:56:48 PST
Attachments
Patch (1.77 KB, patch)
2017-11-15 13:05 PST, alan
no flags
alan
Comment 1 2017-11-15 13:05:39 PST
Antti Koivisto
Comment 2 2017-11-15 13:11:21 PST
Comment on attachment 327012 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=327012&action=review r=me > Source/WebCore/ChangeLog:13 > + Unable to reproduce. :(
WebKit Commit Bot
Comment 3 2017-11-15 13:50:08 PST
Comment on attachment 327012 [details] Patch Clearing flags on attachment: 327012 Committed r224899: <https://trac.webkit.org/changeset/224899>
WebKit Commit Bot
Comment 4 2017-11-15 13:50:09 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-11-15 15:05:57 PST
Note You need to log in before you can comment on or make changes to this bug.