AX triggers sync layout while building the render tree on www.macrumors.com. https://bugs.webkit.org/show_bug.cgi?id=179741 rdar://problem/35462531

Reviewed by Antti Koivisto.

It's unsafe to issue layout while mutating the render tree. If a mutation
requires AX to issue a layout, it needs to be issued in a delayed manner (which the render
tree mutation will trigger anyway).

Unable to reproduce.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::updateBackingStore):


Canonical link: https://commits.webkit.org/195777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224899 268f45cc-cd09-0410-ab3c-d52691b4dbfc